# hellgraph

./: .gitignore  Cargo.toml  NOTICE.md  PROVENANCE.md  README.md  package-lock.json  package.json  rust-toolchain.toml  tsup.config.ts
.github/workflows/: ci.yml  docker-publish.yml  ts-ci.yml
crates/hg_analytics/: BENCHMARKS.md  Cargo.toml
crates/hg_core/: Cargo.toml
crates/hg_fiber/: Cargo.toml
crates/hg_fiber/src/: lib.rs
crates/hg_fieldpack/: Cargo.toml
crates/hg_kernel/: Cargo.toml
crates/hg_proof/: Cargo.toml
crates/hg_read_kernel/: Cargo.toml
crates/hg_runtime/: Cargo.toml
deploy/: Dockerfile  README.md  argocd-application.yaml  superpeer.mjs
deploy/bench/: Dockerfile  README.md  cloudbuild.yaml  run.sh  saturday.sh
deploy/k8s/: superpeer.yaml
docs/: COORDINATION.md  MAC_TRANSFER_AND_PUSH.md  ROADMAP.md  RUNBOOK.md
docs/adr/: 0001-hellgraph-positioning.md  0002-federated-not-central.md  0003-content-plane-composition.md
docs/audit/: KERNEL_SEAM_AUDIT.md  SPEC_TRACEABILITY.md
docs/history/: 08_FieldPack_0001_Provisional.md  09_ProofFamily_0001_BoundedStateConformance.md  10_HellGraph_Rust_Workspace_Map.md  11_Phase3_Audit_and_Corrections.md  12_FieldPack_Canonicalization_Workbook.md  13_FieldPack_Migration_and_Kernel_Integration.md  14_Build_and_Test_Report.md  15_Phase4_Audit_and_Persistence.md  16_Persistent_Journal_and_Checkpoints.md  17_Actual_Workspace_and_Test_Status.md  18_Build_and_Test_Report.md  19_Phase5_Audit_and_Manifest_Correction.md  (+10 more)
scripts/: push_from_bundle_example.sh
ts/: README.md  tsconfig.json
ts/src/: acr.ts  (+110 more)
(+47 files in other folders)
